# ArmFaceID-RPC

./: CMakeLists.txt  README.md
.cache/clangd/index/: rpc_client.cpp.CE72B01FEDA90F04.idx
include/: rpc_client.h  rpc_handler.h  rpc_server.h
proto/: CMakeLists.txt  face.proto  proto.proto
src/: rpc_client.cpp  rpc_handler.cpp  rpc_server.cpp  test.cpp
